--- a/app/globals.css
+++ b/app/globals.css
@@ -2,9 +2,9 @@
 @tailwind components;
 @tailwind utilities;
 
-/* :root {
+:root {
   --foreground-rgb: 255, 255, 255;
-} */
+}
 
 @media (prefers-color-scheme: dark) {
   :root {
@@ -13,5 +13,10 @@
 }
 
 body {
-  /* color: rgb(var(--foreground-rgb)); */
+  color: rgb(var(--foreground-rgb));
+}
+@layer utilities {
+  .nav-link {
+    @apply text-zinc-500 hover:text-zinc-800 transition-colors;
+  }
 }
